--- a/RadiusR.API.CustomerWebService/NLog.config
+++ b/RadiusR.API.CustomerWebService/NLog.config
@@ -29,6 +29,7 @@
     <target xsi:type="File" name="PartnerErrors" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <target xsi:type="File" name="PartnerInComingInfo" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <target xsi:type="File" name="CustomerInComingInfo" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
+    <target xsi:type="File" name="MobileAppLog" createDirs="true" fileName="Logs\${logger}\${date:format=yyyy-MM}\${date:format=dd}.log" layout="[${date:format=yyyy-MM-dd-HH\:mm\:ss.fff} (IP: ${event-properties:item=RequestIP:padding=-15})(Username:${event-properties:item=Username:padding=-25:fixedLength=True})] (${callsite:className=False:fileName=False:includeSourcePath=False:methodName=True}) ${message} ${exception:format=toString,Data:maxInnerExceptionLevel=10}" />
     <!--
     Write events to a file with the date in the filename.
     <target xsi:type="File" name="f" fileName="${basedir}/logs/${shortdate}.log"
@@ -43,6 +44,7 @@
     Write all events with minimal level of Debug (So Debug, Info, Warn, Error and Fatal, but not Trace)  to "f"
     <logger name="*" minlevel="Debug" writeTo="f" />
     -->
+    <logger name="MobileAppLog" final="true" writeTo="MobileAppLog"/>
     <logger name="Errors" final="true" writeTo="Errors"/>
     <logger name="PartnerErrors" final="true" writeTo="PartnerErrors"/>
     <logger enabled="false" name="CustomerInComingInfo" final="true" writeTo="CustomerInComingInfo"/>
