--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -18,18 +18,18 @@
   <package id="RadiusR.Address.QueryInterface" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.AddressQueryAdapter" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.MobilExpress.DBAdapter" version="1.0.1" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.3.3" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.4.0-alpha01" targetFramework="net472" />
   <package id="RadiusR.DB.DomainsCache" version="1.1.2" targetFramework="net472" />
   <package id="RadiusR.DB.TelekomOperations" version="1.1.1" targetFramework="net472" />
   <package id="RadiusR.DB.Utilities" version="1.1.4" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.5" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.7" targetFramework="net472" />
   <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
-  <package id="RadiusR.Localization" version="1.0.7" targetFramework="net472" />
-  <package id="RadiusR.Localization.Lists" version="1.0.11" targetFramework="net472" />
+  <package id="RadiusR.Localization" version="1.0.8" targetFramework="net472" />
+  <package id="RadiusR.Localization.Lists" version="1.0.12" targetFramework="net472" />
   <package id="RadiusR.PDFForms" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.Scheduler.SMS" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.SMS" version="1.0.2" targetFramework="net472" />
-  <package id="RadiusR.SystemLogs" version="1.0.7" targetFramework="net472" />
+  <package id="RadiusR.SystemLogs" version="1.0.8" targetFramework="net472" />
   <package id="RadiusR.VPOS" version="1.0.3" targetFramework="net472" />
   <package id="RezaB.API.MobilExpress" version="1.0.1" targetFramework="net472" />
   <package id="RezaB.API.TCKValidation" version="1.0.1" targetFramework="net472" />
