updated agent web service functions

--- a/RadiusR.API.CustomerWebService/Web.config
+++ b/RadiusR.API.CustomerWebService/Web.config
@@ -41,6 +41,7 @@
     <directoryBrowse enabled="false" />
     <defaultDocument>
       <files>
+        <add value="AgentWebService.svc" />
         <add value="NetspeedCustomerService.svc" />
         <add value="GenericCustomerService.svc" />
         <add value="PartnerService.svc" />
@@ -84,7 +85,10 @@
       <service name="RadiusR.API.CustomerWebService.PartnerService">
         <endpoint address="PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IPartnerService" />
       </service>
-    </services>
+      <service name="RadiusR.API.CustomerWebService.AgentWebService">
+        <endpoint address="AgentWebService.svc" binding="wsHttpBinding" bindingConfiguration="MainBinding" contract="RadiusR.API.CustomerWebService.IAgentWebService" />
+      </service>
+    </services>    
     <bindings>
       <wsHttpBinding>
         <binding name="MainBinding" maxBufferPoolSize="2147483647" maxReceivedMessageSize="2147483647">
