--- a/RadiusR.API.CustomerWebApi/RadiusR.API.CustomerWebApi.csproj
+++ b/RadiusR.API.CustomerWebApi/RadiusR.API.CustomerWebApi.csproj
@@ -558,6 +558,7 @@
     <Content Include="Areas\HelpPage\Views\Help\DisplayTemplates\ApiGroup.cshtml" />
     <Content Include="Areas\HelpPage\Views\Help\Api.cshtml" />
     <Content Include="NLog.config" />
+    <Content Include="Connection.config" />
     <None Include="Properties\Settings.settings">
       <Generator>PublicSettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
