--- a/RadiusR.API.CustomerWebApi/Web.config
+++ b/RadiusR.API.CustomerWebApi/Web.config
@@ -11,6 +11,7 @@
       <section name="RadiusR.API.CustomerWebApi.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <connectionStrings configSource="Connection.config" />
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -18,6 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
   </system.web>
@@ -61,6 +63,100 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="smsnnPortBinding" />
+        <binding name="IntegrationServiceSoap" maxReceivedMessageSize="2147483647">
+          <security mode="Transport" />
+        </binding>
+        <binding name="KPSPublicSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="KPSPublicYabanciDogrulaSoap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="KPSPublicV2Soap">
+          <security mode="Transport" />
+        </binding>
+        <binding name="KPSPublicV2Soap1" />
+        <binding name="BasicHttpsBinding_IAddressQueryService" maxReceivedMessageSize="2147483647">
+          <security mode="Transport" />
+        </binding>
+      </basicHttpBinding>
+      <customBinding>
+        <binding name="FastCheckoutServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpsTransport />
+        </binding>
+      </customBinding>
+      <basicHttpsBinding>
+        <binding name="DslKurumServisSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="ChurnControlServiceSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="PstnBbkIptalSureSorgulaWSSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
+        <binding name="AboneDslamSifreSorguSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
+        <binding name="YeniHizmetNoSorgulaWSSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
+        <binding name="XDSLOperationServiceWSSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
+        <binding name="YeniTesisBasvurusuSoapBinding" receiveTimeout="00:05:00" maxReceivedMessageSize="2147483647" />
+        <binding name="FttxSubscriberOperationWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="AboneDetaySorgulaV2SoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="Abone8mProfilDegisikligiServisSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="KullaniciAdiDogrulamaSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="ServiceAvailabilityCheckWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="TTAdresServisWSSoapBinding" maxReceivedMessageSize="2147483647" openTimeout="00:05:00" sendTimeout="00:05:00" receiveTimeout="00:05:00" />
+        <binding name="XDSLTTOYSAboneHatSorgulaWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="TarifeSorgulamaSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="NDSLOperationManagerWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="NDSLTransferOperationsWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="NakilYeniNumaraServisSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="BasvuruIptalEtmeSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="BasvuruDurumSorgulamaSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="DegisiklikBasvurusuAlSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="XDSLFreezeWSSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="AltyapiSorgulamaSoapBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00" />
+        <binding name="OloPortalMarsEndPointPortBinding" maxReceivedMessageSize="2147483647" receiveTimeout="00:05:00">
+          <security mode="Transport">
+            <transport clientCredentialType="Basic" realm="OLO Portal Web Services" />
+            <message clientCredentialType="UserName" />
+          </security>
+        </binding>
+      </basicHttpsBinding>
+    </bindings>
+    <client>
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/ChurnControlService" binding="basicHttpsBinding" bindingConfiguration="ChurnControlServiceSoapBinding" contract="ChurnControlReference.ChurnControlService" name="ChurnControlService" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/DslKurumServis" binding="basicHttpsBinding" bindingConfiguration="DslKurumServisSoapBinding" contract="DSLOperatorReference.AdslKurumService" name="DslKurumServis" />
+      <endpoint address="https://www.mobilexpress.com.tr/checkout/v7/FastCheckoutService.asmx" binding="customBinding" bindingConfiguration="FastCheckoutServiceSoap12" contract="MobilExpressServiceReference.FastCheckoutServiceSoap" name="FastCheckoutServiceSoap12" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/AboneDslamSifreSorgu" binding="basicHttpsBinding" bindingConfiguration="AboneDslamSifreSorguSoapBinding" contract="DSLAMPasswordReference.AboneDslamSifreSorgu" name="AboneDslamSifreSorgu" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/YeniHizmetNoSorgulaWS" binding="basicHttpsBinding" bindingConfiguration="YeniHizmetNoSorgulaWSSoapBinding" contract="GetNewSubscriberNoReference.YeniHizmetNoService" name="YeniHizmetNoSorgulaWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/AboneDetaySorgulaV2" binding="basicHttpsBinding" bindingConfiguration="AboneDetaySorgulaV2SoapBinding" contract="SubscriberDetailsReference.AbonelikBilgiSorgula" name="AboneDetaySorgulaV2" />
+      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS" binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding" contract="NetGsm.smsnn" name="smsnnPort" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/ServiceAvailabilityCheckWS" binding="basicHttpsBinding" bindingConfiguration="ServiceAvailabilityCheckWSSoapBinding" contract="AvailabilityReference.ServiceAvailabilityCheckService" name="ServiceAvailabilityCheckWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/TTAdresServisWS" binding="basicHttpsBinding" bindingConfiguration="TTAdresServisWSSoapBinding" contract="AddressReference.TTAdresServis" name="TTAdresServisWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/XDSLTTOYSAboneHatSorgulaWS" binding="basicHttpsBinding" bindingConfiguration="XDSLTTOYSAboneHatSorgulaWSSoapBinding" contract="TTOYSReference.XDSLTTOYSAboneHatSorgulaService" name="XDSLTTOYSAboneHatSorgulaWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/TarifeSorgulama" binding="basicHttpsBinding" bindingConfiguration="TarifeSorgulamaSoapBinding" contract="TariffQuery.TarifeSorgulama" name="TarifeSorgulama" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/NDSLOperationManagerWS" binding="basicHttpsBinding" bindingConfiguration="NDSLOperationManagerWSSoapBinding" contract="NewApplicationReference.NDSLOperationManagerService" name="NDSLOperationManagerWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/BasvuruIptalEtme" binding="basicHttpsBinding" bindingConfiguration="BasvuruIptalEtmeSoapBinding" contract="RegistrationCancellationReference.BasvuruIptal" name="BasvuruIptalEtme" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/BasvuruDurumSorgulama" binding="basicHttpsBinding" bindingConfiguration="BasvuruDurumSorgulamaSoapBinding" contract="RegistrationTraceReference.BasvuruDurumSorgulama" name="BasvuruDurumSorgulama" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/DegisiklikBasvurusuAl" binding="basicHttpsBinding" bindingConfiguration="DegisiklikBasvurusuAlSoapBinding" contract="CustomerChangeReference.DegisiklikBasvurusuAl" name="DegisiklikBasvurusuAl" />
+      <endpoint address="https://olo.turktelekom.com.tr/olo-webservice-pcom/1.93/oloPortalMarsService" binding="basicHttpsBinding" bindingConfiguration="OloPortalMarsEndPointPortBinding" contract="OLOReference.OloPortalMarsEndPoint" name="OloPortalMarsEndPointPort" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/NDSLTransferOperationsWS" binding="basicHttpsBinding" bindingConfiguration="NDSLTransferOperationsWSSoapBinding" contract="TransferReference.NDSLTransferService" name="NDSLTransferOperationsWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/NakilYeniNumaraServis" binding="basicHttpsBinding" bindingConfiguration="NakilYeniNumaraServisSoapBinding" contract="TransferGetSubNoReference.NakilYeniNoBulServis" name="NakilYeniNumaraServis" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/KullaniciAdiDogrulama" binding="basicHttpsBinding" bindingConfiguration="KullaniciAdiDogrulamaSoapBinding" contract="UsernameValidationReference.KullaniciAdiDogrulama" name="KullaniciAdiDogrulama" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/Abone8mProfilDegisikligiServis" binding="basicHttpsBinding" bindingConfiguration="Abone8mProfilDegisikligiServisSoapBinding" contract="SpeedProfileStepService.Abone8mProfilDegisikligiServis" name="Abone8mProfilDegisikligiServis" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/XDSLFreezeWS" binding="basicHttpsBinding" bindingConfiguration="XDSLFreezeWSSoapBinding" contract="FreezeReference.XDSLFreezeService" name="XDSLFreezeWS" />
+      <endpoint address="https://integrationservicewithoutmtom.digitalplanet.com.tr/IntegrationService.asmx" binding="basicHttpBinding" bindingConfiguration="IntegrationServiceSoap" contract="NetInvoiceTestService.IntegrationServiceSoap" name="IntegrationServiceSoap" />
+      <endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublic.asmx" binding="basicHttpBinding" bindingConfiguration="KPSPublicSoap" contract="TCKValidationService.KPSPublicSoap" name="KPSPublicSoap" />
+      <endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublicYabanciDogrula.asmx" binding="basicHttpBinding" bindingConfiguration="KPSPublicYabanciDogrulaSoap" contract="ForeignerTCKValidationServiceReference.KPSPublicYabanciDogrulaSoap" name="KPSPublicYabanciDogrulaSoap" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/AltyapiSorgulama" binding="basicHttpsBinding" bindingConfiguration="AltyapiSorgulamaSoapBinding" contract="InfrastructureInfoReference.AltyapiSorgulama" name="AltyapiSorgulama" />
+      <endpoint address="https://tckimlik.nvi.gov.tr/Service/KPSPublicV2.asmx" binding="basicHttpBinding" bindingConfiguration="KPSPublicV2Soap" contract="TCKValidationServiceReference.KPSPublicV2Soap" name="KPSPublicV2Soap" />
+      <endpoint address="https://nsadres.netspeed.com.tr/AddressQueryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IAddressQueryService" contract="AddressQueryServiceReference.IAddressQueryService" name="BasicHttpsBinding_IAddressQueryService" />
+      <!--<endpoint address="http://localhost:18154/AddressQueryService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpsBinding_IAddressQueryService" contract="AddressQueryServiceReference.IAddressQueryService" name="BasicHttpsBinding_IAddressQueryService" />-->
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/FttxSubscriberOperationWS" binding="basicHttpsBinding" bindingConfiguration="FttxSubscriberOperationWSSoapBinding" contract="FTTXOperationsReference.FttxSubscriberOperationService" name="FttxSubscriberOperationWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/YeniTesisBasvurusu" binding="basicHttpsBinding" bindingConfiguration="YeniTesisBasvurusuSoapBinding" contract="PSTNRegistrationReference.Basvuru" name="YeniTesisBasvurusu" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/XDSLOperationServiceWS" binding="basicHttpsBinding" bindingConfiguration="XDSLOperationServiceWSSoapBinding" contract="WorkOrderByBBKReference.XDSLOperationService" name="XDSLOperationServiceWS" />
+      <endpoint address="https://xdsliss.turktelekom.com.tr/services/PstnBbkIptalSureSorgulaWS" binding="basicHttpsBinding" bindingConfiguration="PstnBbkIptalSureSorgulaWSSoapBinding" contract="CancellationHistoryQueryReference.PstnBbkIptalSureSorgula" name="PstnBbkIptalSureSorgulaWS" />
+    </client>
+  </system.serviceModel>
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
