--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -18,15 +18,16 @@
   <package id="RadiusR.Address.QueryInterface" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.AddressQueryAdapter" version="1.0.1" targetFramework="net472" />
   <package id="RadiusR.API.MobilExpress.DBAdapter" version="1.0.1" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.4.0" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.4.1" targetFramework="net472" />
   <package id="RadiusR.DB.DomainsCache" version="1.1.2" targetFramework="net472" />
+  <package id="RadiusR.DB.Localization" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.DB.TelekomOperations" version="1.1.1" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.5-alpha2" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8-alpha1" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.5" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8" targetFramework="net472" />
   <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
-  <package id="RadiusR.Localization" version="1.0.8" targetFramework="net472" />
-  <package id="RadiusR.Localization.Lists" version="1.0.12" targetFramework="net472" />
-  <package id="RadiusR.PDFForms" version="1.0.2" targetFramework="net472" />
+  <package id="RadiusR.Localization" version="1.0.9" targetFramework="net472" />
+  <package id="RadiusR.Localization.Lists" version="1.0.13" targetFramework="net472" />
+  <package id="RadiusR.PDFForms" version="1.0.3" targetFramework="net472" />
   <package id="RadiusR.Scheduler.SMS" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.SMS" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.SystemLogs" version="1.0.8" targetFramework="net472" />
