--- a/RadiusR.API.Test_Unit/packages.config
+++ b/RadiusR.API.Test_Unit/packages.config
@@ -22,14 +22,14 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NLog" version="4.7.6" targetFramework="net472" />
-  <package id="RadiusR.DB" version="1.4.0" targetFramework="net472" />
+  <package id="RadiusR.DB" version="1.4.1" targetFramework="net472" />
   <package id="RadiusR.DB.DomainsCache" version="1.1.2" targetFramework="net472" />
   <package id="RadiusR.DB.TelekomOperations" version="1.1.1" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.5-alpha2" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8-alpha1" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.5" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8" targetFramework="net472" />
   <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
-  <package id="RadiusR.Localization" version="1.0.8" targetFramework="net472" />
-  <package id="RadiusR.Localization.Lists" version="1.0.12" targetFramework="net472" />
+  <package id="RadiusR.Localization" version="1.0.9" targetFramework="net472" />
+  <package id="RadiusR.Localization.Lists" version="1.0.13" targetFramework="net472" />
   <package id="RadiusR.Scheduler.SMS" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.SMS" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.SystemLogs" version="1.0.8" targetFramework="net472" />
