--- a/RadiusR.API.Test_Unit/App.config
+++ b/RadiusR.API.Test_Unit/App.config
@@ -52,15 +52,9 @@
       </wsHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS"
-        binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding"
-        contract="NetGsm.smsnn" name="smsnnPort" />
-      <endpoint address="http://localhost:56365/PartnerService.svc/PartnerService.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPartnerService"
-        contract="PartnerServiceReference.IPartnerService" name="WSHttpBinding_IPartnerService" />
-      <endpoint address="http://localhost:56365/AgentWebService.svc/AgentWebService.svc"
-        binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAgentWebService"
-        contract="AgentServiceReference.IAgentWebService" name="WSHttpBinding_IAgentWebService" />
+      <endpoint address="http://soap.netgsm.com.tr:8080/Sms_webservis/SMS" binding="basicHttpBinding" bindingConfiguration="smsnnPortBinding" contract="NetGsm.smsnn" name="smsnnPort" />
+      <endpoint address="http://localhost:56365/PartnerService.svc/PartnerService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IPartnerService" contract="PartnerServiceReference.IPartnerService" name="WSHttpBinding_IPartnerService" />
+      <endpoint address="http://localhost:56365/AgentWebService.svc/AgentWebService.svc" binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IAgentWebService" contract="AgentServiceReference.IAgentWebService" name="WSHttpBinding_IAgentWebService" />
     </client>
   </system.serviceModel>
   <runtime>
