--- a/RadiusR.API.CustomerWebService/packages.config
+++ b/RadiusR.API.CustomerWebService/packages.config
@@ -22,8 +22,8 @@
   <package id="RadiusR.DB.DomainsCache" version="1.1.2" targetFramework="net472" />
   <package id="RadiusR.DB.Localization" version="1.0.2" targetFramework="net472" />
   <package id="RadiusR.DB.TelekomOperations" version="1.1.1" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities" version="1.1.5-alpha3" targetFramework="net472" />
-  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8-alpha1" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities" version="1.1.5" targetFramework="net472" />
+  <package id="RadiusR.DB.Utilities.ComplexOperations" version="1.1.8" targetFramework="net472" />
   <package id="RadiusR.FileManagement" version="1.1.6" targetFramework="net472" />
   <package id="RadiusR.Localization" version="1.0.9" targetFramework="net472" />
   <package id="RadiusR.Localization.Lists" version="1.0.13" targetFramework="net472" />
